AC_INIT(filterd, 0.1)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([src/config.h])
AM_INIT_AUTOMAKE

AC_CANONICAL_HOST

AC_PROG_LIBTOOL
AC_PROG_CXX

BOOST_REQUIRE([1.34])
BOOST_ASIO
BOOST_HASH
BOOST_DATE_TIME
BOOST_TEST
LIBFCGI
SQLITE3
CRONOLOG

AC_CONFIG_FILES([
Makefile
src/Makefile
test/Makefile
])

AC_CONFIG_TESTDIR([test])

AC_OUTPUT
